--- a/app/src/main/res/layout/item_daily_ganhuo.xml
+++ b/app/src/main/res/layout/item_daily_ganhuo.xml
@@ -20,7 +20,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-
             <TextView
                 android:id="@+id/text_title"
                 android:layout_width="wrap_content"
@@ -30,9 +29,9 @@
                 android:layout_marginTop="8dp"
                 android:fontFamily="serif"
                 android:gravity="center"
+                android:text="@{ganHuo.getDesc()}"
                 android:textSize="18sp"
                 android:textStyle="bold"
-                android:text="@{ganHuo.getDesc()}"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
@@ -64,7 +63,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/text_who"
                 app:srcCompat="@mipmap/ic_launcher"
-                app:visibleGone="@{ganHuo.getImages() == null}" />
+                app:visibleGone="@{ganHuo.getImages().size() != 1}" />
 
             <ImageView
                 android:id="@+id/imageView2"
@@ -80,7 +79,7 @@
                 app:layout_constraintStart_toEndOf="@+id/imageView1"
                 app:layout_constraintTop_toBottomOf="@+id/text_who"
                 app:srcCompat="@mipmap/ic_launcher"
-                app:visibleGone="@{ganHuo.getImages() == null}" />
+                app:visibleGone="@{ganHuo.getImages().size() != 2}" />
         </android.support.constraint.ConstraintLayout>
 
     </android.support.v7.widget.CardView>
