--- a/app/src/main/res/layout/item_daily_ganhuo.xml
+++ b/app/src/main/res/layout/item_daily_ganhuo.xml
@@ -41,29 +41,29 @@
                 android:id="@+id/text_who"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="8dp"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
+                android:padding="8dp"
                 android:text="@{`[` + ganHuo.getWho() + `]`}"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/text_title"
-                tools:text="[daimajia]" />
+                tools:text="[daimajia]"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp" />
 
             <ImageView
                 android:id="@+id/imageView1"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:layout_marginBottom="8dp"
-                android:layout_marginRight="8dp"
-                android:layout_marginTop="8dp"
                 app:imageUrl="@{ganHuo.getImages().size() == 1 ? ganHuo.getImages().get(0) : null}"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/imageView2"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/text_who"
                 app:srcCompat="@mipmap/ic_launcher"
-                app:visibleGone="@{ganHuo.getImages().size() != 1}" />
+                app:visibleGone="@{ganHuo.getImages().size() != 1}"
+                android:layout_marginTop="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/text_who" />
 
             <ImageView
                 android:id="@+id/imageView2"
@@ -72,14 +72,14 @@
                 android:layout_marginBottom="8dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
                 app:imageUrl="@{ganHuo.getImages().size() == 2 ? ganHuo.getImages().get(1) : null}"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/imageView1"
-                app:layout_constraintTop_toBottomOf="@+id/text_who"
                 app:srcCompat="@mipmap/ic_launcher"
-                app:visibleGone="@{ganHuo.getImages().size() != 2}" />
+                app:visibleGone="@{ganHuo.getImages().size() != 2}"
+                android:layout_marginTop="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/text_who" />
         </android.support.constraint.ConstraintLayout>
 
     </android.support.v7.widget.CardView>
