--- a/app/src/main/res/layout/item_daily_title.xml
+++ b/app/src/main/res/layout/item_daily_title.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <variable
             name="title"
             type="String" />
@@ -13,9 +14,17 @@
         android:id="@+id/textView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="10dp"
+        android:paddingBottom="10dp"
+        android:paddingEnd="10dp"
+        android:paddingLeft="20dp"
+        android:paddingRight="10dp"
+        android:paddingStart="20dp"
+        android:paddingTop="10dp"
         android:text="@{title}"
-        tools:text="@android:string/VideoView_error_title" />
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        android:textStyle="bold"
+        android:typeface="sans"
+        tools:text="Android" />
 
 </layout>
 
