--- a/app/src/main/res/layout/item_daily_ganhuo.xml
+++ b/app/src/main/res/layout/item_daily_ganhuo.xml
@@ -30,6 +30,7 @@
                 android:fontFamily="serif"
                 android:gravity="center"
                 android:text="@{ganHuo.getDesc()}"
+                android:textAlignment="center"
                 android:textSize="18sp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -41,15 +42,16 @@
                 android:id="@+id/text_who"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginEnd="8dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
                 android:padding="8dp"
                 android:text="@{`[` + ganHuo.getWho() + `]`}"
+                android:textAlignment="center"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/text_title"
-                tools:text="[daimajia]"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginEnd="8dp" />
+                tools:text="[daimajia]" />
 
             <ImageView
                 android:id="@+id/imageView1"
