--- a/app/src/main/res/layout/item_daily.xml
+++ b/app/src/main/res/layout/item_daily.xml
@@ -12,9 +12,11 @@
     </data>
 
     <android.support.v7.widget.CardView
+        android:id="@+id/card_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:cardUseCompatPadding="true">
+        app:cardUseCompatPadding="true"
+        android:layout_margin="8dp">
 
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
