--- a/app/src/main/res/layout/item_daily_ganhuo.xml
+++ b/app/src/main/res/layout/item_daily_ganhuo.xml
@@ -16,6 +16,7 @@
         android:layout_height="wrap_content">
 
         <android.support.v7.widget.CardView
+            android:id="@+id/card_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:cardUseCompatPadding="true"
